--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -63,6 +63,11 @@ jobs:
   # # - and replace REPLACE_WITH_YOUR_HEROKU_APP_NAME in this file with the name of your Heroku app
 
   # deploy_heroku:
+  # HEROKU_OAUTH_SECRET=2cbfa0fe-c133-40da-bbb1-95278fbff500
+  # HEROKU_OAUTH_ID=e425f99e-7c3f-4fd5-8d43-a92a5ebc5c03
+  # HEROKU_API_KEY = 2cbfa0fe-c133-40da-bbb1-95278fbff500
+  # HEROKU_EMAIL = lam.trinh@global.t-bird.edu
+
   #   needs: build
   #   runs-on: ubuntu-latest
 
@@ -71,7 +76,40 @@ jobs:
   #   - uses: akhileshns/heroku-deploy@v3.0.4 # This is the action
   #     with:
   #       heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-  #       heroku_app_name: "REPLACE_WITH_YOUR_HEROKU_APP_NAME" # Must be unique in Heroku
+  #       heroku_app_name: "taxi-fare-website-trial" # Must be unique in Heroku
   #       heroku_email: ${{secrets.HEROKU_EMAIL}}
 
-# CD code
+# CD code with gcloud, doesn't work yet
+# Need 4 things: GCP project ID, app_name, email, and credentials in Github secrets
+    # deploy:
+      # GCP_PROJECT_ID = le-wagon-final-project
+      # GCP_APP_NAME = taxi-fare-model
+      # GCP_EMAIL = lam.bao.trinh@gmail.com
+      # GCP_CREDENTIALS =
+        name: Setup Gcloud Account
+        runs-on: ubuntu-latest
+        env:
+          IMAGE_NAME: asia.gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
+        steps:
+
+        - name: Login
+          uses: google-github-actions/setup-gcloud@v0
+          with:
+            project_id: ${{ secrets.GCP_PROJECT_ID }}
+            service_account_email: ${{ secrets.GCP_EMAIL }}
+            service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+
+        - name: Configure Docker
+          run: gcloud auth configure-docker --quiet
+
+        - name: Checkout repository
+          uses: actions/checkout@v2
+
+        - name: Build Docker image
+          run: docker build . -t $IMAGE_NAME
+
+        - name: Push Docker image
+          run: docker push $IMAGE_NAME
+
+        - name: Deploy Docker image # Fix the region in Asia
+          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region asia-northeast1 --platform managed
